# dnd-assistant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dnd_tg_bot.ipynb  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: ml_system_design_doc.md
src/: config.toml
src/servers/: answer_server.py  retriever_server.py
src/utils/: base_models.py  retriever.py
