[project]
name = "dnd-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Darinochka1",email = "darisha6602@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.10"
dependencies = [
    "pre-commit (>=4.4.0,<5.0.0)"
]

[tool.ruff]
line-length = 88
indent-width = 4

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
