[project]
name = "dnd-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Darinochka1",email = "darisha6602@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pre-commit (>=4.4.0,<5.0.0)",
    "langchain (==0.1.14)",
    "datasets (>=4.4.1,<5.0.0)",
    "fastapi (>=0.110.0,<0.111.0)",
    "langserve[all] (>=0.0.47,<0.0.48)",
    "httpx[socks] (>=0.27.0,<0.28.0)",
    "toml (>=0.10.2,<0.11.0)",
    "pdfminer-six (>=20251107,<20251108)",
    "sentence-transformers (>=2.5.1,<3.0.0)",
    "qdrant-client (>=1.7.0,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "nltk (>=3.9.2,<4.0.0)"
]

[tool.ruff]
line-length = 88
indent-width = 4

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
